--- a/index.css
+++ b/index.css
@@ -20,11 +20,11 @@ form input[type=password]{
     padding: 10px 50px;
     margin: 10px 0;
     width: 300px;
-    border: 1px solid rgb(2, 105, 88);
+    border: 1px   solid rgb(2, 105, 88);
+    border-left: 0;
     height: 20px;
     font-family: 'Montserrat', sans-serif;
     outline: 0;
-    border-radius: 5px;
     font-weight: bold;
 }
 form input[type=email]:active,
@@ -47,3 +47,14 @@ form input[type=submit]{
 form input[type=submit]:hover{
     background-color: rgb(165, 165, 252);
 }
+i{
+    background-color: rgb(35, 240, 255);
+    padding: 13px;
+    color: white;
+}
+p{
+    font-size: 2rem;
+}
+    
+
+
